Fix displaying of the triangle shapes

o Define modifier for Isosceles, define viewbox for both types
o glue points, enhanced path and text areas
  are different in triangle shape types

BUG:272459